styles.css
@import url('https://fonts.googleapis.com/css2?family=Libertinus+Keyboard&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');


* {
    background-color: lightblue;
    font-family: "Libertinus Keyboard", system-ui;
    text-transform: uppercase;
    font-size: 20px;
}

body {
    font-family: Arial, sans-serif;
    text-align: center;
    margin: 0;
    padding: 20px;
    height: 100vh;
    width: 100vw;
}

.minesweeper-grid {
    display: grid;
    grid-template-columns: repeat(8, 38px);
    grid-template-rows: repeat(8, 38px);
    justify-content: center;
    margin-top: 20px;
}

.grid-btn {
    width: 36px;
    height: 36px;
    font-size: 18px;
    font-weight: bold;
    border: 2px solid black;
    background-color: white;
    cursor: pointer;
}

